Fix 1px overflow at bottom of discovery page

--- a/src/styles/components/MenuButton.scss
+++ b/src/styles/components/MenuButton.scss
@@ -1,7 +1,7 @@
 .menu-button {
   position: absolute;
   padding: 3px 0;
-  bottom: 0;
+  bottom: 1px;
   left: 0;
   right: 0;
 
